force-app/main/default/objects/Customer_Verification_History__c/Customer_Verification_History__c.object-meta.xml
<CustomObject>
    <label>Customer Verification History</label>
    <nameField>
        <displayFormat>CVH-{0000}</displayFormat>
        <label>Customer Verification History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Verification History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>