force-app/main/default/objects/Customer_Verification_History__c/fields/Failure_Methods__c.field-meta.xml
<CustomField>
    <fullName>Failure_Methods__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Failure Methods</label>
    <length>255</length>
    <type>Text</type>
</CustomField>