force-app/main/default/objects/Customer_Verification_History__c/fields/Success_Methods__c.field-meta.xml
<CustomField>
    <fullName>Success_Methods__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Success Methods</label>
    <length>255</length>
    <type>Text</type>
</CustomField>