force-app/main/default/objects/Customer_Verification_History__c/fields/Verification_Bypass_Reason__c.field-meta.xml
<CustomField>
    <fullName>Verification_Bypass_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Verification  Bypass Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>