force-app/main/default/objects/Customer_Verification_History__c/fields/Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Verification_Status__c</fullName>
    <label>Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Verified</fullName>
            </value>
            <value>
                <fullName>Verification Failed</fullName>
            </value>
            <value>
                <fullName>Bypass Verification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>