force-app/main/default/objects/Customer_Verification_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Verification_Bypass_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>