force-app/main/default/objects/Customer_Verification_History__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>User__c</columns>
    <columns>Verification_Status__c</columns>
    <columns>Verification_Bypass_Reason__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>